--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit==1.31.0
-pandas==2.0.3
-numpy==1.24.3
-plotly==5.18.0
-joblib==1.3.2
-scikit-learn==1.3.2
-tensorflow==2.15.0
-statsmodels==0.14.1
-prophet==1.1.5
+streamlit
+pandas
+numpy
+plotly
+joblib
+scikit-learn
+tensorflow>=2.16.0
+statsmodels
+prophet
+yfinance
